--- a/src/localization/locales/ps.json
+++ b/src/localization/locales/ps.json
@@ -278,5 +278,43 @@
   "retry": "بیا هڅه وکړئ",
   "goBack": "بیرته ستون",
   "errorIconAlt": "د تېروتنې انځور"
-}
+},
+  "ecommerceMetrics": {
+    "mainWallet": "د اصلي بټې بیلانس",
+    "commissionWallet": "د کمیسیون بټې بیلانس",
+    "totalRetailers": "ټول خرڅونکي",
+    "active": "فعال",
+    "inactive": "غیر فعال"
+  },
+  "stockTransferChart": {
+    "title": "آمار انتقالات سهام",
+    "subtitle": "اهداف انتقال سهام برای هر {period}",
+    "monthly": "ماهیانه",
+    "weekly": "هفتگی",
+    "month": "ماه",
+    "week": "هفته",
+    "noData": "داده‌ای برای انتقال موجود نیست",
+    "loading": "در حال بارگیری داده‌های انتقال...",
+    "error": "خطا در بارگیری داده‌های انتقال",
+    "series": {
+      "sales": "فروش (انتقال)",
+      "volume": "حجم (انتقال)"
+    }
+  },
+"purchaseChart": {
+    "title": "د سهام د پیرود احصایې",
+    "subtitle": "د سهام د پیرود هدفونه د هر {period} لپاره",
+    "monthly": "میاشتنی",
+    "weekly": "اونیزه",
+    "month": "میاشت",
+    "week": "اونۍ",
+    "noData": "د پیرود لپاره هیڅ معلومات نشته",
+    "loading": "د پیرود معلومات په بار کېږي...",
+    "error": "د پیرود معلوماتو په بارولو کې ستونزه",
+    "series": {
+      "sales": "خرڅلاو (پیرود)",
+      "volume": "حجم (پیرود)"
+    }
+  }
+
 }
