Remove unused components and files related to MonthlySalesChart, MonthlyTarget, and RecentOrders; add new hooks and utility functions for account type and navigation filtering; create a new Order page and update the unused code report.

--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -9,6 +9,7 @@
     "RequestReverse": "Request To Reverse Stock",
     "MerchantManagement": "Merchant Management",
     "ManageAgent": "Manage Agent",
+    "Orders": "Orders",
     "TicketManagement": "Ticket Management",
     "Statement": "Statement",
     "Products": "Products",
@@ -315,7 +316,114 @@
       "sales": "Sales (Purchase)",
       "volume": "Volume (Purchase)"
     }
-  }
+  },
+  "recharge": "Recharge Statics",
+  "recharge1": "Recharge targets for each",
+  "month": "Month",
+  "week": "Week",
+  "monthly": "Monthly",
+  "weekly": "Weekly",
+  "loadingT": "Loading recharge data...",
+  "rechargeT": "Error loading recharge data",
+  "jan": "Jan",
+  "feb": "Feb",
+  "mar": "Mar",
+  "apr": "Apr",
+  "may": "May",
+  "jun": "Jun",
+  "jul": "Jul",
+  "aug": "Aug",
+  "sep": "Sep",
+  "oct": "Oct",
+  "nov": "Nov",
+  "dec": "Dec",
+  "showing1": "Showing results for:",
+  "show": "Showing",
+  "to": "to",
+  "of": "of",
+  "records": "records",
+  "row1": "Rows per page:",
+  "page": "Page",
+  "createP": "Create Purchase Request",
+  "paymentM": "Payment Method",
+  "cash": "Cash",
+  "bank": "Bank",
+  "online": "Online",
+  "lease": "Lease",
+  "amount": "Amount",
+  "noteO": "Note (Optional)",
+  "attachment": "Attachment",
+  "drag1": "Drag & drop file here or click to browse",
+  "select": "Selected File:",
+  "remove": "Remove",
+  "drag2": "Drag & drop file here or click to browse",
+  "support1": "Supported formats: JPG, PNG, JPEG, PDF",
+  "cancel": "Cancel",
+  "submit": "Submit Request",
+  "submitting...": "Submitting...",
+  "purchaseFailed": "Purchase Request Failed",
+  "note": "Note",
+  "retry": "Retry",
+  "goBack": "Go Back",
+  "purchaseRS": "Purchase Request Submitted Successfully!",
+  "NewRe": "New Reverse Stock Request",
+  "selectR": "Select Retailer",
+  "commentsO": "Comments (Optional)",
+  "attachmentO": "Attachemnt (Optional)",
+  "retailer": "Retailer",
+  "comment": "Comment",
+  "pleaseC": "Please check the details and try again",
+  "retryR": "Retry Request",
+  "reverseStockRS": "Reverse Stock Request Submitted Successfully!",
+  "processing": "Processing",
+  "status": "Status",
+  "continue": "Continue",
+  "ticketTypeR": "Ticket type is required",
+  "descriptionR": "Description is required",
+  "mobileNR": "Mobile number is required",
+  "transactionNR": "Transaction number is required",
+  "createN": "Create New Ticket",
+  "ticketT": "Ticket Type *",
+  "selectTT": "Select a ticket type",
+  "mobileNRR": "Mobile Number *",
+  "transactionNRR": "Transaction Number *",
+  "descriptionRR": "Description *",
+  "createT": "Create Ticket",
+  "creating...": "Creating...",
+  "ticketCF": "Ticket Creation Failed",
+  "tryAgain": "Try Again",
+  "ticketCS": "Ticket Created Successfully!",
+  "ticketID": "Ticket ID:",
+  "type:": "Type:",
+  "status:": "Status:",
+  "createdAt:": "Created At:",
+  "ticketI": "Ticket ID",
+  "ticketD": "Ticket Details",
+  "type": "Type",
+  "createdAt": "Created At",
+  "mobileNumber": "Mobile Number",
+  "transactionNumber": "Transaction Number",
+  "description": "Description",
+  "adminComment": "Admin Comment",
+  "close": "Close",
+  "pleaseSelectB": "Please select both start and end dates",
+  "generateS": "Generate Statement",
+  "filterT": "Filter Type",
+  "startD": "Start Date",
+  "endD": "End Date",
+  "generating...": "Generating...",
+  "date": "Date",
+  "transactionID": "Transaction ID",
+  "debit": "Debit",
+  "credit": "Credit",
+  "balance": "Balance",
+  "remarks": "Remarks",
+  "agent": "Agent",
+  "failedTLS": "Failed to load statements",
+  "export": "Export",
+  "showingS": "Showing statements from"
+
+  
 
 
 
