--- a/src/localization/locales/fa.json
+++ b/src/localization/locales/fa.json
@@ -239,7 +239,7 @@
     "goBack": "بازگشت",
     "errorImageAlt": "تصویر خطا"
   },
-  "transferModal": {
+  "transferModal1": {
   "title": "انتقال سهام به نماینده زیرمجموعه",
   "agentLabel": "انتخاب نماینده",
   "amountLabel": "مقدار را وارد کنید",
@@ -316,6 +316,116 @@
       "sales": "فروش (خرید)",
       "volume": "حجم (خرید)"
     }
-  }
+  },
+  "recharge": "آمار شارژ",
+  "recharge1": "اهداف شارژ برای هر",
+  "month": "ماه",
+  "week": "هفته",
+  "monthly": "ماهیانه",
+  "weekly": "هفتگی",
+  "loadingT": "در حال بارگذاری معلومات شارژ...",
+  "rechargeT": "خطا در بارگذاری معلومات شارژ",
+  "jan": "جنوری",
+  "feb": "فبروری",
+  "mar": "مارچ",
+  "apr": "اپریل",
+  "may": "می",
+  "jun": "جون",
+  "jul": "جولای",
+  "aug": "اگست",
+  "sep": "سپتمبر",
+  "oct": "اکتوبر",
+  "nov": "نومبر",
+  "dec": "دسمبر",
+  "showing1": "نمایش نتایج برای:",
+  "show": "نمایش",
+  "to": "تا",
+  "of": "از",
+  "records": "ریکاردها",
+  "row1": "ردیف‌ ها در هر صفحه:",
+  "page": "صفحه",
+  "createP": "ایجاد درخواست خرید",
+  "paymentM": "روش پرداخت",
+  "cash": "نقدی",
+  "bank": "بانک",
+  "online": "آنلاین",
+  "lease": "قرضه",
+  "amount": "مقدار",
+  "noteO": "یادداشت (اختیاری)",
+  "attachment": "ضمیمه",
+  "drag1": "فایل را اینجا بکشید و رها کنید یا کلیک کنید برای جستجو",
+  "select": "فایل انتخاب‌شده:",
+  "remove": "حذف",
+  "drag2": "فایل را اینجا بکشید و رها کنید یا کلیک کنید برای جستجو",
+  "support1": "فرمت‌های قابل پشتیبانی: JPG، PNG، JPEG، PDF",
+  "cancel": "لغو",
+  "submit": "ارسال درخواست",
+  "submitting...": "در حال ارسال...",
+  "purchaseFailed": "درخواست خرید ناکام شد",
+  "note": "یادداشت",
+  "retry": "دوباره کوشش کنید",
+  "goBack": "برگشت",
+  "purchaseRS": "درخواست خرید موفقانه ارسال شد!",
+  "NewRe": "درخواست جدید برگشت جنس",
+  "selectR": "فروشنده را انتخاب کنید",
+  "commentsO": "تبصره‌ها (اختیاری)",
+  "attachmentO": "ضمیمه (اختیاری)",
+  "retailer": "فروشنده",
+  "comment": "تبصره",
+  "pleaseC": "لطفاً جزئیات را بررسی کرده و دوباره کوشش کنید",
+  "retryR": "دوباره درخواست دهید",
+  "reverseStockRS": "درخواست برگشت جنس موفقانه ارسال شد!",
+  "processing": "در حال اجرا",
+  "status": "وضعیت",
+  "continue": "ادامه دهید",
+  "ticketTypeR": "نوع تکت ضروری است",
+  "descriptionR": "توضیحات ضروری است",
+  "mobileNR": "شماره موبایل ضروری است",
+  "transactionNR": "شماره معامله ضروری است",
+  "createN": "ایجاد تکت جدید",
+  "ticketT": "نوع تکت *",
+  "selectTT": "نوع تکت را انتخاب کنید",
+  "mobileNRR": "شماره موبایل *",
+  "transactionNRR": "شماره معامله *",
+  "descriptionRR": "توضیحات *",
+  "createT": "ایجاد تکت",
+  "creating...": "در حال ایجاد...",
+  "ticketCF": "ایجاد تکت ناکام شد",
+  "tryAgain": "دوباره کوشش کنید",
+  "ticketCS": "تکت موفقانه ایجاد شد!",
+  "ticketID": "شماره تکت:",
+  "type:": "نوع:",
+  "status:": "وضعیت:",
+  "createdAt:": "ایجاد شده در:",
+  "ticketI": "شماره تکت",
+  "ticketD": "جزئیات تکت",
+  "type": "نوع",
+  "createdAt": "ایجاد شده در",
+  "mobileNumber": "شماره موبایل",
+  "transactionNumber": "شماره معامله",
+  "description": "توضیحات",
+  "adminComment": "تبصره مدیر",
+  "close": "بستن",
+  "pleaseSelectB": "لطفاً تاریخ شروع و ختم را انتخاب کنید",
+  "generateS": "ایجاد گزارش",
+  "filterT": "نوع فیلتر",
+  "startD": "تاریخ شروع",
+  "endD": "تاریخ ختم",
+  "generating...": "در حال ایجاد...",
+  "date": "تاریخ",
+  "transactionID": "شماره معامله",
+  "debit": "برداشت",
+  "credit": "واریز",
+  "balance": "بیلانس",
+  "remarks": "ملاحظات",
+  "agent": "نماینده",
+  "failedTLS": "بارگذاری گزارش‌ها ناکام شد",
+  "export": "صادر کردن",
+  "showingS": "نمایش گزارش‌ها از",
+  "pleaseF": "لطفاً تمام بخش‌های ضروری را خانه‌پری کنید",
+  "amountMBG": "مقدار باید بیشتر از صفر باشد",
+  "reverseSCS": "برگشت جنس موفقانه ایجاد شد!"
+
+
 
 }
